Fixed resizing bug
Previously, when the browser was made smaller, the sidebar and the content would overlap and look terrible.

--- a/theme/css/bubbles.css
+++ b/theme/css/bubbles.css
@@ -56,6 +56,6 @@ div.module.unrounded {
 	padding: 5px;
 }
 
-div.module.sidebar {
-	width: 250px;
+div#sidebar div.module.sidebar {
+	width: 95%;
 }
