--- a/theme/css/website.css
+++ b/theme/css/website.css
@@ -313,7 +313,7 @@ div#sidebar ul.hatnav li {
 				
 div#sidebar ul.hatnav li a {
 	display: block;
-	width: 230px;
+	width: 95%;
 	color: white;
 }
 
